--- a/assets/scss/_clipboard-js.scss
+++ b/assets/scss/_clipboard-js.scss
@@ -19,7 +19,7 @@
   z-index: 10;
   display: block;
   padding: .25rem .5rem;
-  font-size: 75%;
+  @include rfs(75%);
   color: #818a91;
   cursor: pointer;
   background-color: transparent;
