--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -5,7 +5,7 @@
 .bd-footer {
   padding: 4rem 0;
   margin-top: 4rem;
-  font-size: 85%;
+  @include rfs(14);
   text-align: center;
   background-color: #f7f7f7;
 
