--- a/docs/4.0/examples/carousel/carousel.css
+++ b/docs/4.0/examples/carousel/carousel.css
@@ -74,13 +74,8 @@ body {
 @media (min-width: 40em) {
   /* Bump up size of carousel content */
   .carousel-caption p {
-    margin-bottom: 1.25rem;
-    font-size: 1.25rem;
+    margin-bottom: 1.25em;
     line-height: 1.4;
-  }
-
-  .featurette-heading {
-    font-size: 50px;
   }
 }
 
