--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -118,13 +118,14 @@ $theme-color-interval: 8% !default;
 //
 // Quickly modify global styling by enabling or disabling optional features.
 
-$enable-rounded:            true !default;
-$enable-shadows:            false !default;
-$enable-gradients:          false !default;
-$enable-transitions:        true !default;
-$enable-hover-media-query:  false !default;
-$enable-grid-classes:       true !default;
-$enable-print-styles:       true !default;
+$enable-rounded:               true !default;
+$enable-shadows:               false !default;
+$enable-gradients:             false !default;
+$enable-transitions:           true !default;
+$enable-hover-media-query:     false !default;
+$enable-grid-classes:          true !default;
+$enable-print-styles:          true !default;
+$enable-responsive-font-sizes: true !default;
 
 
 // Spacing
@@ -235,9 +236,9 @@ $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, 
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:       $font-family-sans-serif !default;
 
-$font-size-base: 1rem !default; // Assumes the browser default, typically `16px`
-$font-size-lg:   1.25rem !default;
-$font-size-sm:   .875rem !default;
+$font-size-base: 16px !default; // Assumes the browser default, typically `16px`
+$font-size-lg:   20px !default;
+$font-size-sm:   14px !default;
 
 $font-weight-normal: normal !default;
 $font-weight-bold: bold !default;
@@ -245,12 +246,12 @@ $font-weight-bold: bold !default;
 $font-weight-base: $font-weight-normal !default;
 $line-height-base: 1.5 !default;
 
-$h1-font-size: 2.5rem !default;
-$h2-font-size: 2rem !default;
-$h3-font-size: 1.75rem !default;
-$h4-font-size: 1.5rem !default;
-$h5-font-size: 1.25rem !default;
-$h6-font-size: 1rem !default;
+$h1-font-size: 40px !default;
+$h2-font-size: 32px !default;
+$h3-font-size: 28px !default;
+$h4-font-size: 24px !default;
+$h5-font-size: 20px !default;
+$h6-font-size: 16px !default;
 
 $headings-margin-bottom: ($spacer / 2) !default;
 $headings-font-family:   inherit !default;
@@ -258,10 +259,10 @@ $headings-font-weight:   500 !default;
 $headings-line-height:   1.1 !default;
 $headings-color:         inherit !default;
 
-$display1-size: 6rem !default;
-$display2-size: 5.5rem !default;
-$display3-size: 4.5rem !default;
-$display4-size: 3.5rem !default;
+$display1-size: 96px !default;
+$display2-size: 88px !default;
+$display3-size: 72px !default;
+$display4-size: 56px !default;
 
 $display1-weight:     300 !default;
 $display2-weight:     300 !default;
@@ -269,7 +270,7 @@ $display3-weight:     300 !default;
 $display4-weight:     300 !default;
 $display-line-height: $headings-line-height !default;
 
-$lead-font-size:   1.25rem !default;
+$lead-font-size:   20px !default;
 $lead-font-weight: 300 !default;
 
 $small-font-size: 80% !default;
@@ -323,16 +324,16 @@ $table-inverse-color:           $body-bg !default;
 //
 // For each of Bootstrap's buttons, define text, background and border color.
 
-$input-btn-padding-y:       .5rem !default;
-$input-btn-padding-x:       .75rem !default;
+$input-btn-padding-y:       .5em !default;
+$input-btn-padding-x:       .75em !default;
 $input-btn-line-height:     1.25 !default;
 
-$input-btn-padding-y-sm:    .25rem !default;
-$input-btn-padding-x-sm:    .5rem !default;
+$input-btn-padding-y-sm:    .25em !default;
+$input-btn-padding-x-sm:    .5em !default;
 $input-btn-line-height-sm:  1.5 !default;
 
-$input-btn-padding-y-lg:    .5rem !default;
-$input-btn-padding-x-lg:    1rem !default;
+$input-btn-padding-y-lg:    .5em !default;
+$input-btn-padding-x-lg:    1em !default;
 $input-btn-line-height-lg:  1.5 !default;
 
 $btn-font-weight:                $font-weight-normal !default;
@@ -375,13 +376,13 @@ $input-placeholder-color:        $gray-600 !default;
 
 $input-height-border:           $input-btn-border-width * 2 !default;
 
-$input-height-inner:            ($font-size-base * $input-btn-line-height) + ($input-btn-padding-y * 2) !default;
+$input-height-inner:            $input-btn-line-height + ($input-btn-padding-y * 2) !default;
 $input-height:                  calc(#{$input-height-inner} + #{$input-height-border}) !default;
 
-$input-height-inner-sm:         ($font-size-sm * $input-btn-line-height-sm) + ($input-btn-padding-y-sm * 2) !default;
+$input-height-inner-sm:         $input-btn-line-height-sm + ($input-btn-padding-y-sm * 2) !default;
 $input-height-sm:               calc(#{$input-height-inner-sm} + #{$input-height-border}) !default;
 
-$input-height-inner-lg:         ($font-size-sm * $input-btn-line-height-lg) + ($input-btn-padding-y-lg * 2) !default;
+$input-height-inner-lg:         $input-btn-line-height-lg + ($input-btn-padding-y-lg * 2) !default;
 $input-height-lg:               calc(#{$input-height-inner-lg} + #{$input-height-border}) !default;
 
 $input-transition:               border-color ease-in-out .15s, box-shadow ease-in-out .15s !default;
@@ -528,8 +529,8 @@ $zindex-tooltip:            1070 !default;
 
 // Navs
 
-$nav-link-padding-y:            .5rem !default;
-$nav-link-padding-x:            1rem !default;
+$nav-link-padding-y:            .5em !default;
+$nav-link-padding-x:            1em !default;
 $nav-link-disabled-color:       $gray-600 !default;
 
 $nav-tabs-border-color:                       #ddd !default;
@@ -546,17 +547,17 @@ $nav-pills-link-active-bg:    $component-active-bg !default;
 
 // Navbar
 
-$navbar-padding-y:                  ($spacer / 2) !default;
+$navbar-padding-y:                  .5em !default;
 $navbar-padding-x:                  $spacer !default;
 
 $navbar-brand-font-size:            $font-size-lg !default;
 // Compute the navbar-brand padding-y so the navbar-brand will have the same height as navbar-text and nav-link
-$nav-link-height:                   $navbar-brand-font-size * $line-height-base !default;
-$navbar-brand-height:               ($font-size-base * $line-height-base + $nav-link-padding-y * 2) !default;
+$nav-link-height:                   1em * $line-height-base !default;
+$navbar-brand-height:               ($line-height-base + $nav-link-padding-y * 2) !default;
 $navbar-brand-padding-y:            ($navbar-brand-height - $nav-link-height) / 2 !default;
 
-$navbar-toggler-padding-y:           .25rem !default;
-$navbar-toggler-padding-x:           .75rem !default;
+$navbar-toggler-padding-y:           .25em !default;
+$navbar-toggler-padding-x:           .75em !default;
 $navbar-toggler-font-size:           $font-size-lg !default;
 $navbar-toggler-border-radius:       $btn-border-radius !default;
 
@@ -730,7 +731,7 @@ $alert-border-width:          $border-width !default;
 // Progress bars
 
 $progress-height:               1rem !default;
-$progress-font-size:            .75rem !default;
+$progress-font-size:            12px !default;
 $progress-bg:                   $gray-200 !default;
 $progress-border-radius:        $border-radius !default;
 $progress-box-shadow:           inset 0 .1rem .1rem rgba($black,.1) !default;
