--- a/scss/mixins/_rfs.scss
+++ b/scss/mixins/_rfs.scss
@@ -4,11 +4,24 @@
 //
 // See https://github.com/MartijnCuppens/rfs.
 
-@mixin rfs($fs) {
+@mixin rfs($fs, $important: false) {
+
+  $suffix: '';
+
+  // Add !important suffix if needed.
+  @if($important){
+    $suffix: ' !important';
+  }
+
   // If $fs is not a number (like inherit) or $fs has a unit (like 1.5em) or $ is 0, just print the value.
-  @if type-of($fs) != 'number' or not unitless($fs) or $fs == 0 {
-    font-size: #{$fs};
+  @if type-of($fs) != 'number' or (not unitless($fs) and unit($fs) != 'px') or $fs == 0 {
+    font-size: #{$fs}#{$suffix};
   } @else {
+
+    // If a px-value is passed, trim px-suffix
+    @if (unit($fs) == 'px'){
+      $fs: $fs / ($fs * 0 + 1)
+    }
 
     // Minimum fontsize.
     $rfs_minimum_font_size: 12 !default;
@@ -26,9 +39,9 @@
 
     // Default font-size.
     @if $rfs_minimum_font_size_unit == rem {
-      font-size: #{$fs / $rfs_rem_value}rem;
+      font-size: #{$fs / $rfs_rem_value}rem#{$suffix};
     } @else if $rfs_minimum_font_size_unit == px {
-      font-size: #{$fs}px;
+      font-size: #{$fs}px#{$suffix};
     } @else {
       @error "`#{$rfs_minimum_font_size_unit}` is not a valid unit for $rfs_minimum_font_size_unit. Use `px` or `rem`.";
     }
@@ -39,7 +52,7 @@
 
     // Only add media query if font-size is bigger as the minimum font-size.
     // If $rfs_factor == 1, no rescaling will take place.
-    @if $fs > $rfs_minimum_font_size and $rfs_factor != 1 {
+    @if $enable-responsive-font-sizes and $fs > $rfs_minimum_font_size and $rfs_factor != 1 {
 
       // These variables must be defined outside of the if-else-construction.
       // see https://stackoverflow.com/questions/15371332/sass-ignores-variables-defined-in-if-statement.
@@ -74,7 +87,7 @@
 
       // Render the calculated font-size.
       @media (max-width: #{$mq_max_width}) {
-        font-size: calc(#{$min_width} + #{$variable_width});
+        font-size: calc(#{$min_width} + #{$variable_width})#{$suffix};
       }
     }
   }
