--- a/scss/_breadcrumb.scss
+++ b/scss/_breadcrumb.scss
@@ -1,6 +1,6 @@
 .breadcrumb {
   padding: $breadcrumb-padding-y $breadcrumb-padding-x;
-  margin-bottom: 1rem;
+  margin: $breadcrumb-margin;
   list-style: none;
   background-color: $breadcrumb-bg;
   @include border-radius($border-radius);
