--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,6 +13,7 @@
 // Spacing
 // Body
 // Links
+// Paragraphs
 // Grid breakpoints
 // Grid containers
 // Grid columns
@@ -166,6 +167,12 @@ $link-color:            theme-color("primary") !default;
 $link-decoration:       none !default;
 $link-hover-color:      darken($link-color, 15%) !default;
 $link-hover-decoration: underline !default;
+
+// Paragraphs
+//
+// Style p element.
+
+$para-margin: 0 0 1rem;
 
 
 // Grid breakpoints
@@ -786,6 +793,8 @@ $figure-caption-color:     $gray-600 !default;
 $breadcrumb-padding-y:          .75rem !default;
 $breadcrumb-padding-x:          1rem !default;
 $breadcrumb-item-padding:       .5rem !default;
+
+$breadcrumb-margin:             0 0 1rem !default;
 
 $breadcrumb-bg:                 $gray-200 !default;
 $breadcrumb-divider-color:      $gray-600 !default;
