--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -234,7 +234,7 @@ $transition-collapse:    height .35s ease !default;
 // See https://github.com/MartijnCuppens/rfs.
 
 $rfs-minimum-font-size: 12px !default;
-$rfs-minimum-font-size-unit: px !default;
+$rfs-minimum-font-size-unit: rem !default;
 
 $rfs-breakpoint: 1200px !default;
 $rfs-breakpoint-unit: px !default;
