--- a/scss/_images.scss
+++ b/scss/_images.scss
@@ -38,6 +38,6 @@
 }
 
 .figure-caption {
-  font-size: $figure-caption-font-size;
+  @include rfs($figure-caption-font-size);
   color: $figure-caption-color;
 }
