--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -77,7 +77,7 @@
 // Button sizes
 @mixin button-size($padding-y, $padding-x, $font-size, $line-height, $border-radius) {
   padding: $padding-y $padding-x;
-  font-size: $font-size;
+  @include rfs($font-size);
   line-height: $line-height;
   @include border-radius($border-radius);
 }
