Standardised affix font colour

--- a/less/logos.less
+++ b/less/logos.less
@@ -18,7 +18,7 @@
 }
 
 .logo-inverse,
-.navbar-inverse .navbar-brand  {
+.navbar-inverse .navbar-brand, .affix .navbar-brand  {
 	background-image: @logo-full-inverse;
 }
 
