add margin variable for paragraphs changes after review

--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -99,7 +99,8 @@ h1, h2, h3, h4, h5, h6 {
 // Similarly, the top margin on `<p>`s get reset. However, we also reset the
 // bottom margin to use `rem` units instead of `em`.
 p {
-  margin: $para-margin;
+  margin-top: 0;
+  margin-bottom: $paragraph-margin-bottom;
 }
 
 // Abbreviations
