--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -172,7 +172,7 @@ $link-hover-decoration: underline !default;
 //
 // Style p element.
 
-$para-margin: 0 0 1rem;
+$paragraph-margin-bottom: 1rem;
 
 
 // Grid breakpoints
