Added bg-focus contextual background for jumbotron

--- a/less/jumbotron.less
+++ b/less/jumbotron.less
@@ -9,6 +9,16 @@
   background-color: @jumbotron-bg;
   transition: background-color 0.2s ease-in;
 
+  &.bg-focus {
+    h1, .h1 {
+      color: @brand-navy;
+    }
+
+    .lead {
+      color: @brand-grey-plus-10;
+    }
+  }
+
   h1,
   .h1 {
     color: @jumbotron-heading-color;
