--- a/less/type.less
+++ b/less/type.less
@@ -347,8 +347,9 @@ strong {
   .bg-variant(@gray-base);
 }
 .bg-focus {
-  background-color: #FFF;
+  background-color: @brand-white;
 }
+
 
 .jumbotron,
 .bg-primary {
@@ -374,7 +375,6 @@ strong {
 .bg-primary {
   color: @brand-light-blue-wash;
 }
-
 
 // Page header
 // -------------------------
