Update jumbotron styles

--- a/less/jumbotron.less
+++ b/less/jumbotron.less
@@ -5,23 +5,17 @@
 
 .jumbotron {
   padding: @jumbotron-padding 0;
-  color: @jumbotron-color;
-  background-color: @jumbotron-bg;
   transition: background-color 0.2s ease-in;
 
-  &.bg-focus {
-    h1, .h1 {
-      color: @brand-navy;
+  .jumbotron-image & {
+    h1, h2, h3, h4, h5, h6,
+    .h1, .h2, .h3, .h4, .h5, .h6 {
+      color: @brand-white;
     }
 
-    .lead {
-      color: @brand-grey-plus-10;
+    dd, strong, .strong {
+      color: @brand-white;
     }
-  }
-
-  h1,
-  .h1 {
-    color: @jumbotron-heading-color;
   }
 
   p {
@@ -60,6 +54,8 @@
 
   > .jumbotron {
     background-color: @navbar-collapse-bg;
+    color: @jumbotron-heading-color;
+
 
     @media (min-width: @screen-md-min) {
         background-color: @navbar-collapse-bg;
@@ -76,3 +72,5 @@
     }
   }
 }
+
+
