--- a/scss/_functions.scss
+++ b/scss/_functions.scss
@@ -49,7 +49,7 @@
 }
 
 // Color contrast
-@mixin color-yiq($color, $prop: 'color') {
+@mixin color-yiq($color, $prop: "color") {
   $r: red($color);
   $g: green($color);
   $b: blue($color);
