--- a/less/type.less
+++ b/less/type.less
@@ -348,6 +348,15 @@ strong {
 }
 .bg-focus {
   background-color: @brand-white;
+
+  h1, h2, h3, h4, h5, h6,
+  .h1, .h2, .h3, .h4, .h5, .h6 {
+    color: @brand-navy;
+  }
+
+  p, .lead {
+    color: @brand-grey-plus-10;
+  }
 }
 
 
