Add circle background component

--- a/docs/_includes/nav/components.html
+++ b/docs/_includes/nav/components.html
@@ -29,7 +29,18 @@
     <li><a href="#btn-groups-justified">Justified button groups</a></li>
   </ul>
 </li>
-<li><a href="#circles">Circles</a></li>
+<li><a href="#circles">Circles</a> </li>
+<li><a href="#circle-background">Circle backgrounds</a>
+  <ul class="nav">
+    <li><a href="#circle-bg-default">Defaults</a></li>
+    <li><a href="#circle-bg-sizes">Sizes</a></li>
+    <li><a href="#circle-bg-pos-c">Positions (center)</a></li>
+    <li><a href="#circle-bg-pos">Positions (box edge)</a></li>
+    <li><a href="#circle-bg-size-pos">Size and positions</a></li>
+    <li><a href="#circle-bg-clip">Clipping boxes</a></li>
+    <li><a href="#circle-bg-colour">Colours</a></li>
+  </ul>
+</li>
 <li>
   <a href="#dropdowns">Dropdowns</a>
   <ul class="nav">
