--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -58,6 +58,7 @@
 @import "transferwise.less";
 @import "spacing.less";
 @import "circle.less";
+@import "circle-background.less";
 @import "logos.less";
 @import "iconfont/style.less";
 @import "currency-flags.less";
