Update sticky header offset CSS & JS

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -11,6 +11,10 @@
   > h2[id],
   > h3[id],
   > h4[id] {
+    pointer-events: none;
+    > * {
+      pointer-events: auto;
+    }
     &::before {
       position: relative;
       z-index: -1;
