--- a/docs/4.0/layout/index.html
+++ b/docs/4.0/layout/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting…</title>
-  <link rel="canonical" href="http://getbootstrap.com/docs/4.0/layout/overview/">
-  <meta http-equiv="refresh" content="0; url=http://getbootstrap.com/docs/4.0/layout/overview/">
+  <link rel="canonical" href="https://getbootstrap.com/docs/4.0/layout/overview/">
+  <meta http-equiv="refresh" content="0; url=https://getbootstrap.com/docs/4.0/layout/overview/">
   <h1>Redirecting…</h1>
-  <a href="http://getbootstrap.com/docs/4.0/layout/overview/">Click here if you are not redirected.</a>
-  <script>location="http://getbootstrap.com/docs/4.0/layout/overview/"</script>
+  <a href="https://getbootstrap.com/docs/4.0/layout/overview/">Click here if you are not redirected.</a>
+  <script>location="https://getbootstrap.com/docs/4.0/layout/overview/"</script>
 </html>
