--- a/docs/4.0/components/button-group/index.html
+++ b/docs/4.0/components/button-group/index.html
@@ -18,18 +18,18 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Button group">
   <meta name="twitter:description" content="Group a series of buttons together on a single line with the button group, and super-power them with JavaScript.">
-  <meta name="twitter:image" content="http://getbootstrap.com/assets/brand/bootstrap-social-logo.png">
+  <meta name="twitter:image" content="https://getbootstrap.com/assets/brand/bootstrap-social-logo.png">
 
 
 <!-- Facebook -->
 
-  <meta property="og:url" content="http://getbootstrap.com/docs/4.0/components/button-group/">
+  <meta property="og:url" content="https://getbootstrap.com/docs/4.0/components/button-group/">
   <meta property="og:title" content="Button group">
   <meta property="og:description" content="Group a series of buttons together on a single line with the button group, and super-power them with JavaScript.">
   <meta property="og:type" content="website">
 
 <meta property="og:image" content="http://getbootstrap.com/assets/brand/bootstrap-social.png">
-<meta property="og:image:secure_url" content="http://getbootstrap.com/assets/brand/bootstrap-social.png">
+<meta property="og:image:secure_url" content="https://getbootstrap.com/assets/brand/bootstrap-social.png">
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
@@ -41,7 +41,7 @@
 
 <!-- Bootstrap core CSS -->
 
-  <link href="/dist/css/bootstrap.css" rel="stylesheet">
+  <link href="/dist/css/bootstrap.min.css" rel="stylesheet">
 
 
 <!-- Documentation extras -->
@@ -1301,14 +1301,11 @@
 <script src="/assets/js/vendor/popper.min.js"></script>
 
 
-  <script src="/dist/js/bootstrap.js"></script>
+  <script src="/dist/js/bootstrap.min.js"></script>
 
 
 
-  <script src="/assets/js/vendor/anchor.min.js"></script>
-  <script src="/assets/js/vendor/clipboard.min.js"></script>
-  <script src="/assets/js/vendor/holder.min.js"></script>
-  <script src="/assets/js/src/application.js"></script>
+  <script src="/assets/js/docs.min.js"></script>
 
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
