--- a/docs/4.0/layout/media-object/index.html
+++ b/docs/4.0/layout/media-object/index.html
@@ -18,18 +18,18 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Media object">
   <meta name="twitter:description" content="Documentation and examples for Bootstrap's media object to construct highly repetitive components like blog comments, tweets, and the like.">
-  <meta name="twitter:image" content="http://getbootstrap.com/assets/brand/bootstrap-social-logo.png">
+  <meta name="twitter:image" content="https://getbootstrap.com/assets/brand/bootstrap-social-logo.png">
 
 
 <!-- Facebook -->
 
-  <meta property="og:url" content="http://getbootstrap.com/docs/4.0/layout/media-object/">
+  <meta property="og:url" content="https://getbootstrap.com/docs/4.0/layout/media-object/">
   <meta property="og:title" content="Media object">
   <meta property="og:description" content="Documentation and examples for Bootstrap's media object to construct highly repetitive components like blog comments, tweets, and the like.">
   <meta property="og:type" content="website">
 
 <meta property="og:image" content="http://getbootstrap.com/assets/brand/bootstrap-social.png">
-<meta property="og:image:secure_url" content="http://getbootstrap.com/assets/brand/bootstrap-social.png">
+<meta property="og:image:secure_url" content="https://getbootstrap.com/assets/brand/bootstrap-social.png">
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
@@ -41,7 +41,7 @@
 
 <!-- Bootstrap core CSS -->
 
-  <link href="/dist/css/bootstrap.css" rel="stylesheet">
+  <link href="/dist/css/bootstrap.min.css" rel="stylesheet">
 
 
 <!-- Documentation extras -->
@@ -1299,14 +1299,11 @@
 <script src="/assets/js/vendor/popper.min.js"></script>
 
 
-  <script src="/dist/js/bootstrap.js"></script>
+  <script src="/dist/js/bootstrap.min.js"></script>
 
 
 
-  <script src="/assets/js/vendor/anchor.min.js"></script>
-  <script src="/assets/js/vendor/clipboard.min.js"></script>
-  <script src="/assets/js/vendor/holder.min.js"></script>
-  <script src="/assets/js/src/application.js"></script>
+  <script src="/assets/js/docs.min.js"></script>
 
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
