--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -126,6 +126,7 @@ $enable-transitions:        true !default;
 $enable-hover-media-query:  false !default;
 $enable-grid-classes:       true !default;
 $enable-print-styles:       true !default;
+$enable-placeholder-links:  true !default;
 
 
 // Spacing
