adds swipe icon

--- a/scss/custom/utilities/_icons.scss
+++ b/scss/custom/utilities/_icons.scss
@@ -78,6 +78,7 @@
 .icon-heart:before { content: $icon-heart; }
 .icon-heart-outline:before { content: $icon-heart-outline; }
 .icon-location:before { content: $icon-location; }
+.icon-swipe:before { content: $icon-swipe; }
 
 
 // Modifiers
