--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -379,6 +379,7 @@ $icon-remove: "\e924";
 $icon-heart: "\e925";
 $icon-heart-outline: "\e926";
 $icon-location: "\e927";
+$icon-swipe: "\e928";
 
 
 // Components
