--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -68,10 +68,14 @@
   left: 0;
   z-index: $zindex-modal-backdrop;
   background-color: $modal-backdrop-bg;
+  display:none;
 
   // Fade for backdrop
   &.fade { opacity: 0; }
-  &.show { opacity: $modal-backdrop-opacity; }
+  &.show { 
+    opacity: $modal-backdrop-opacity; 
+    display:block; 
+  }
 }
 
 // Modal header
