--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -68,14 +68,11 @@
   left: 0;
   z-index: $zindex-modal-backdrop;
   background-color: $modal-backdrop-bg;
-  display:none;
+  display:none;  
 
   // Fade for backdrop
   &.fade { opacity: 0; }
-  &.show { 
-    opacity: $modal-backdrop-opacity; 
-    display:block; 
-  }
+  &.show { display:block; opacity: $modal-backdrop-opacity; }
 }
 
 // Modal header
