--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -604,17 +604,17 @@ $card-columns-margin:       $card-spacer-y !default;
 
 // Tooltips
 
-$tooltip-max-width:           200px !default;
+$tooltip-max-width:           12rem !default;
 $tooltip-color:               $white !default;
 $tooltip-bg:                  $black !default;
 $tooltip-opacity:             .9 !default;
-$tooltip-padding-y:           3px !default;
-$tooltip-padding-x:           8px !default;
+$tooltip-padding-y:           .25rem !default;
+$tooltip-padding-x:           .5rem !default;
 $tooltip-margin:              0 !default;
 
 
-$tooltip-arrow-width:         5px !default;
-$tooltip-arrow-height:        5px !default;
+$tooltip-arrow-width:         .4rem !default;
+$tooltip-arrow-height:        $tooltip-arrow-width !default;
 $tooltip-arrow-color:         $tooltip-bg !default;
 
 
