--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -14,18 +14,18 @@
 // Grid breakpoints
 // Grid containers
 // Grid columns
-// Fonts
 // Components
+// Fonts
 // Tables
 // Buttons
 // Forms
+// Form validation
 // Dropdowns
 // Z-index master list
 // Navs
 // Navbar
 // Pagination
 // Jumbotron
-// Form states and alerts
 // Cards
 // Tooltips
 // Popovers
