added not-allowed cursor in disable form

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -58,6 +58,9 @@
     // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655.
     opacity: 1;
   }
+  &:disabled {
+    cursor: not-allowed;
+  }
 }
 
 select.form-control {
