added not-allowed cursor in disable form

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -28,6 +28,7 @@
   // Disabled comes first so active can properly restyle
   &.disabled,
   &:disabled {
+    cursor: not-allowed;
     opacity: .65;
     @include box-shadow(none);
   }
