update for removing inline css in form designer/runtime

--- a/less/system-builder/system-builder-app.less
+++ b/less/system-builder/system-builder-app.less
@@ -163,6 +163,38 @@ body {
   margin-top:20px;
 }
 
+.min-height-300px {
+  min-height: 300px;
+}
+
+.border-top-radius-0 {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0
+}
+
+.float-none {
+  float: none;
+}
+
+.width-100px {
+  width: 100px;
+}
+
+.float-none {
+  float: none;
+}
+
+.padding-15px {
+  padding: 15px;
+}
+
+.sf-array-close-button {
+  position: absolute;
+  z-index: 20;
+  right: 5px;
+  top: 5px;
+}
+
 .clear {
   clear: both;
 }
