update according to code review feedback

--- a/less/system-builder/system-builder-plugins.less
+++ b/less/system-builder/system-builder-plugins.less
@@ -1,1 +1,4 @@
+@import "system-builder/plugins/array.less";
+@import "system-builder/plugins/data-grid.less";
+@import "system-builder/plugins/elastic-search.less";
 @import "system-builder/plugins/map.less";
