assume inline-block

--- a/scss/mixins/_text-truncate.scss
+++ b/scss/mixins/_text-truncate.scss
@@ -1,8 +1,8 @@
 // Text truncate
 // Requires inline-block or block for proper styling
 
-@mixin text-truncate() {
-  display: block;
+@mixin text-truncate($display: inline-block) {
+  display: $display;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
