--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -88,6 +88,7 @@ $enable-transitions:        true !default;
 $enable-hover-media-query:  false !default;
 $enable-grid-classes:       true !default;
 $enable-print-styles:       true !default;
+$enable-rtl:                false !default;
 
 
 // Spacing
